# packages/api/src/generated/openapi.json
@@ -2952,7 +2952,7 @@
               "application/json": {
                 "schema": {
                   "properties": {
-                    "worker": {
+                    "workerKey": {
                       "$ref": "#/components/schemas/FolderWorkerKeyData"
                     },
                     "token": {
@@ -2960,7 +2960,7 @@
                     }
                   },
                   "required": [
-                    "worker",
+                    "workerKey",
                     "token"
                   ],
                   "type": "object"
@@ -3074,6 +3074,61 @@
             "schema": {
               "format": "double",
               "type": "number"
+            }
+          }
+        ]
+      }
+    },
+    "/server/worker-keys/{workerKeyId}": {
+      "delete": {
+        "operationId": "deleteServerWorkerKey",
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "properties": {
+                    "success": {
+                      "type": "boolean"
+                    }
+                  },
+                  "required": [
+                    "success"
+                  ],
+                  "type": "object"
+                }
+              }
+            }
+          },
+          "4XX": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "Server"
+        ],
+        "security": [
+          {
+            "AccessToken": [
+              "server_worker_key:create"
+            ]
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "workerKeyId",
+            "required": true,
+            "schema": {
+              "type": "string"
             }
           }
         ]
